--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </head>
 <body>
 
-    <embed src="Falling up (Shel Silverstein).mp3" loop="true" autostart="true" ></embed>
+    <audio src="Falling up (Shel. Silverstein).mp3" autoplay></audio>
 
 <div class="grid-container">
     <div></div>
