--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav>
                 <ul id="nav-links">
-                    <li id="home"><a href="">Home</a></li>
+                    <li id="home"><a href="index.html">Home</a></li>
                     <li><a href="">About Me</a></li>
                     <li><a href="">Projects</a></li>
                 </ul>
@@ -22,13 +22,13 @@
         <h1 id="page_title">Project Portfolio</h1>
         <main id="projects-grid">
             <article id="project1" class="project_item">
-                <h2 class="project_number"><a href="">Title</a></h2>
+                <h2 class="project_number"><a href="white nationalist and Greek/index.html">Title</a></h2>
                 <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 1 image" width="" height=""/>
                 <h3 class="project_title">My First Webpage using HTML</h3>
                 <p class="project_description">In this first project, I created a valid HTML5 webpage and formated text and images. </p>
             </article>
             <article id="project2" class="project_item">
-                <h2 class="project_number"><a href="">Title</a></h2>
+                <h2 class="project_number"><a href="story html/index.html">Title</a></h2>
                 <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 2 image" />
                 <h3 class="project_title">Early Internet Art: Accessible Surfing</h3>
                 <p class="project_description">In this second project, I created a website inspired by Early Internet Art. </p>
