--- a/sites/layingoutlayouts/pages/flexbox.html
+++ b/sites/layingoutlayouts/pages/flexbox.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <p><a href="https://cachilder.github.io/">Home</a> <a href="indexlayout.html" id="boxmodellinkheader"> Box Model</a></p>
+        <p id="headerlinks"><a href="https://cachilder.github.io/">Home</a> <a href="indexlayout.html" id="boxmodellinkheader"> Box Model</a></p>
         <p id="header">This is a <a href="https://www.w3schools.com/css/css3_flexbox.asp"
              id="flexboxlink"> flexbox...</a></p>
 
