--- a/sites/layingoutlayouts/pages/indexlayout.html
+++ b/sites/layingoutlayouts/pages/indexlayout.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <p><a href="https://cachilder.github.io/">Home</a></p>
+        <p id="headerlinks"><a href="https://cachilder.github.io/">Home</a></p>
     <p id="header">Web design is based on the <a href="https://www.wd3schools.com/css/css_boxmodel.asp" id="boxmodellink">box model</a>...</p>
     </body>
     <div id="firstbox">
