--- a/sites/layingoutlayouts/pages/grid.html
+++ b/sites/layingoutlayouts/pages/grid.html
@@ -9,14 +9,14 @@
 
 
     <body>
-        <p><a href="https://cachilder.github.io/">Home</a> <a href="flexbox.html" id="flexboxlinkheader"> Flexbox</a></p>
+        <p id="headerlinks"><a href="https://cachilder.github.io/">Home</a> <a href="flexbox.html" id="flexboxlinkheader"> Flexbox</a></p>
     <p id="header">This is a <a href="https://www.w3schools.com/css/css_grid.asp" id="gridlink"> grid</a>...</p>
     <div class="grid-container">
         <div class="item1">Grids</div>
         <div class="item2">have</div>
         <div class="item3">different</div>  
         <div class="item4">layouts!</div>
-        <div class="item5">Next?</div>
+        <div class="item5"><a href="float.html">Next?</a></div>
       </div>   
 
 </body>
