--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </article>
             <article id="project3" class="project_item">
                 <h2 class="project_number"><a href="sites/layingoutlayouts/pages/indexlayout.html">Laying out layouts</a></h2>
-                <img class="project_image" src="https://i.postimg.cc/J7P6Fx1Z/download.png" alt="project 3 image" width ="125px"height="300px"/>
+                <img class="project_image" src="https://www.simplilearn.com/ice9/free_resources_article_thumb/css-advance-1.JPG" alt="project 3 image" width ="125px"height="300px"/>
                 <h3 class="project_title">Laying out Layouts</h3>
                 <p class="project_description">In this third project, I built a responsive, educational website that reminded future me how to build a responsive website.</p>
             </article>
