--- a/sites/layingoutlayouts/pages/flexbox row-reverse copy.html
+++ b/sites/layingoutlayouts/pages/flexbox row-reverse copy.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles4/styles4.css">
+        <link rel="stylesheet" href="styles4around/styles4around.css">
         <title>layingoutlayouts:flexbox</title>
     </head>
 
@@ -20,7 +20,7 @@
                         <li>This</li>
                         <li>This</li>
                         <li>This</li>
-                        <li id="lastline">This</li>
+                        <li><a href="flexboxnext.html">Hmmm...almost</a></li>
                     </ul></div>
                 <div>
                     <ul style="list-style: none;">
@@ -28,7 +28,7 @@
                         <li>Is</li>
                         <li>Is</li>
                         <li>Is</li>
-                        <li id="lastline">Is</li>
+                        <li>IS</li>
                     </div>
                 <div>
                     <ul style="list-style: none;">
@@ -44,7 +44,7 @@
                         <li>Flexbox</li>
                         <li>Flexbox</li>
                         <li>Flexbox</li>
-                        <li><a href="flexbox row-reverse.html">What's next?</a></li>
+                        <li>Flexbox</li>
                     </div>
              </div>
         </body>
