--- a/sites/layingoutlayouts/pages/flexbox row-reverse.html
+++ b/sites/layingoutlayouts/pages/flexbox row-reverse.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles4/styles4.css">
+        <link rel="stylesheet" href="styles4 copy/styles4copy.css">
         <title>layingoutlayouts:flexbox</title>
     </head>
 
@@ -36,7 +36,7 @@
                     <li>A</li>
                     <li>A</li>
                     <li>A</li>
-                    <li id="lastline">A</li>
+                    <li><a href="flexbox row-reverse copy.html">Oops!</a></li>
                 </div>
                     <div>
                         <ul style="list-style: none;">
@@ -44,7 +44,7 @@
                         <li>Flexbox</li>
                         <li>Flexbox</li>
                         <li>Flexbox</li>
-                        <li><a href="flexbox row-reverse.html">What's next?</a></li>
+                        <li id="lastline">Flexbox</li>
                     </div>
              </div>
         </body>
