--- a/sites/layingoutlayouts/pages/flexboxnext.html
+++ b/sites/layingoutlayouts/pages/flexboxnext.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles4/styles4.css">
+        <link rel="stylesheet" href="styles4next/styles4next.css">
         <title>layingoutlayouts:flexbox</title>
     </head>
 
@@ -44,7 +44,7 @@
                         <li>Flexbox</li>
                         <li>Flexbox</li>
                         <li>Flexbox</li>
-                        <li><a href="flexbox row-reverse.html">What's next?</a></li>
+                        <li><a href="grid.html">Next?</a></li>
                     </div>
              </div>
         </body>
