--- a/sites/storyhtml/fallingupindex.html
+++ b/sites/storyhtml/fallingupindex.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css files/styles.css">
+        <link rel="stylesheet" href="css files/styles3.css">
         <title>Falling Up</title>
         </head>
 <body>
