--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8" lang = "en" dir="ltr">
-        <meta name="author" content ="your name">
+        <meta name="author" content ="caitlinchilders">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio of Web Work</title>
         <link href="styles1/style1.css" type="text/css" rel="stylesheet">
@@ -54,8 +54,8 @@
                 <p class="project_description">In this third project, I built a responsive, educational website that reminded future me how to build a responsive website.</p>
             </article>
             <article id="project4" class="project_item">
-                <h2 class="project_number"><a href="./index.html">Title</a></h2>
-                <img class="project_image" src="https://i.postimg.cc/J7P6Fx1Z/download.png" alt="project 4 image" width ="125px"height="300px"/>
+                <h2 class="project_number"><a href="sites/javascriptsimpletask/javascriptindex.html">Suggestions for Submission</a></h2>
+                <img class="project_image" src="https://i.postimg.cc/rpNKDTvD/Screen-Shot-2022-10-25-at-3-06-09-PM.png" alt="project 4 image" width ="125px"height="300px"/>
                 <h3 class="project_title">JavaScript: Simple Task</h3>
                 <p class="project_description">In this fourth project, I used JavaScript to do a certain Task.</p>
             </article>
