--- a/sites/javascriptsimpletask/javascriptindex.html
+++ b/sites/javascriptsimpletask/javascriptindex.html
@@ -27,7 +27,7 @@
                 <ul id="nav-links">
                     <li id="home"><a href="https://cachilder.github.io/">Home</a></li>
                     <h1 id="page_title">Suggestions for Submission</h1>
-                    <li><a href="">Gallery (Not yet available)</a></li>
+                    <li><a href="https://arthistorians.info/explore">Gallery</a></li>
                 </ul>
             </nav>
         </header>
