--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
 
                 <ul id="nav-links">
-                    <li id="home"><a href="index.html">Home</a></li>
+                    <li id="about"><a href="index.html">Home</a></li>
                     <h1 id="page_title">Project Portfolio</h1>
                     <li><a href="https://www.linkedin.com/in/caitlin-childers-629154200/">About Me</a></li>
                     <li><a href="https://www.instagram.com/c.childers_design/">Projects</a></li>
@@ -60,8 +60,8 @@
                 <p class="project_description">In this fourth project, I used JavaScript to do a certain Task.</p>
             </article>
             <article id="project5" class="project_item">
-                <h2 class="project_number"><a href="./index.html">Title</a></h2>
-                <img class="project_image" src="https://i.postimg.cc/J7P6Fx1Z/download.png" alt="project 5 image" width ="125px"height="300px"/>
+                <h2 class="project_number"><a href="sites/selfbranding/selfbrandingindex.html">C.Childers Design</a></h2>
+                <img class="project_image" src="https://pro2-bar-s3-cdn-cf4.myportfolio.com/d55f99c3-cde3-4b4e-a943-8666c771fcd5/f523eb65-54c0-4049-8ea5-e378140dc516_rw_1200.jpg?h=f8df29a9c0ea701f6060a38ce6418781" alt="project 5 image" width ="125px"height="300px"/>
                 <h3 class="project_title">Personal Website: To Brand or Not to Brand?</h3>
                 <p class="project_description">In this fifth project, I built a personal website that is pro-personal branding or anti-personal branding or ironic personal branding or anywhere in-between</p>
             </article>
