--- a/sites/selfbranding/pages/graphicdesigngallery.html
+++ b/sites/selfbranding/pages/graphicdesigngallery.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul id="navigation">
                 <li  id="pagetitle">C.Childers Design</li>
-                <li><a href="selfbrandingindex.html">About</a></li>
+                <li><a href="https://cachilder.github.io/sites/selfbranding/selfbrandingindex.html">About</a></li>
                 <li id="activelinkgraphicdesign">Graphic Design</li>
                 <li><a href="digitalreconstructiongallery.html">Digital Reconstruction</a>
                 <li><a href="contact.html">Contact</a></li>
