--- a/sites/selfbranding/pages/contact.html
+++ b/sites/selfbranding/pages/contact.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" lang = "en" dir="ltr">
         <meta name="author" content ="caitlinchilders">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="stylescss/selfbrandingstyles.css" type="text/css" rel="stylesheet">
+        <link href="../stylescss/selfbrandingstyles.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">        <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
             <nav>
                 <ul id="navigation">
                 <li  id="pagetitle">C.Childers Design</li>
-                <li><a href="https://cachilder.github.io/sites/selfbranding/selfbrandingindex.html">About</a></li>
+                <li><a href="../selfbrandingindex.html">About</a></li>
                 <li><a href="graphicdesigngallery.html">Graphic Design</li>
                 <li><a href="digitalreconstructiongallery.html">Digital Reconstruction</a></li>
                 <li id="activelinkcontact">Contact</li>
@@ -36,12 +36,17 @@
             <div></div>
             <div class="info">
               <ul style="list-style: none;">
-                <div><form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
-                  <form id="myForm">
-                  <li id="input">*Name<input type="text" name="name"></li></div>
-                  <div><li id="input">*Email <input type="text" name="email"></li></div>
-                  <div><li id="input">Notes <input type="text" id="myTextnotes"></li></div>
-                  <div><li id="button"><input type="submit" value="Submit"></form></div>
+              <form name="contact" method="post">
+        <div><label>Name</label>
+        <input type="text" name="name"></div>
+        <div><label>Subject</label>
+        <input type="text" name="subject"></div>
+        <div><label>Phone Number</label>
+        <input type="text" name="phone"></div>
+        <div><label>Message</label>
+        <textarea name="message"></textarea></div>    
+        <div><a href="mailto:someone@example.com?subject=Test Subject">Send mssage</a></div>
+    </form></div>
                             
                         </li>
                         
