--- a/sites/selfbranding/pages/graphicdesigngallery.html
+++ b/sites/selfbranding/pages/graphicdesigngallery.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" lang = "en" dir="ltr">
         <meta name="author" content ="caitlinchilders">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="stylescss/selfbrandingstyles.css" type="text/css" rel="stylesheet">
+        <link href="../stylescss/selfbrandingstyles.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">        <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
             <nav>
                 <ul id="navigation">
                 <li  id="pagetitle">C.Childers Design</li>
-                <li><a href="https://cachilder.github.io/sites/selfbranding/selfbrandingindex.html">About</a></li>
+                <li><a href="../selfbrandingindex.html">About</a></li>
                 <li id="activelinkgraphicdesign">Graphic Design</li>
                 <li><a href="digitalreconstructiongallery.html">Digital Reconstruction</a>
                 <li><a href="contact.html">Contact</a></li>
