--- a/sites/layingoutlayouts/pages/flexboxnext.html
+++ b/sites/layingoutlayouts/pages/flexboxnext.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles4next/styles4next.css">
+        <link rel="stylesheet" href="../styles2/styles2.css">
         <title>layingoutlayouts:flexbox</title>
     </head>
 
 
     <body>
-        <p id="headerlinks"><a href="https://cachilder.github.io/">Home</a> <a href="indexlayout.html" id="boxmodellinkheader"> Box Model</a></p>
+        <p id="headerlinks"><a href="https://cachilder.github.io/">Home</a> <a href="../styles2/styles2.css" id="boxmodellinkheader"> Box Model</a></p>
         <p id="header">This is a <a href="https://www.w3schools.com/css/css3_flexbox.asp"
              id="flexboxlink"> flexbox...</a></p>
 
