--- a/sites/layingoutlayouts/pages/float.html
+++ b/sites/layingoutlayouts/pages/float.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylesfloat/stylesfloat.css">
+        <link rel="stylesheet" href="../styles2/styles2.css">
         <title>layingoutlayouts:flexbox</title>
     </head>
 
 
     <body>
-        <p id="headerlinks"><a href="https://cachilder.github.io/">Home</a> <a href="flexbox.html" id="flexboxlinkheader"> Flexbox</a></p>
+        <p id="headerlinksfloat"><a href="https://cachilder.github.io/">Home</a> <a href="flexbox.html" id="flexboxlinkheaderfloat"> Flexbox</a></p>
     <p id="header">And if you have an image you use a 
         <a href="https://www.w3schools.com/cssref/pr_class_float.asp" id="floatlink"> 
             float</a>...</p>
@@ -17,7 +17,7 @@
         id="leftpointer" alt="left pointer" height="300" width="300"></p>            <p><img src="https://freesvg.org/storage/img/thumb/pointing-finger-right.png" 
         id="rightpointer" alt="right pointer" height="300" width="300"></p>
                
-                <div class="flex-container">
+                <div class="flex-containerfloat">
 
                     <div>This is the code to get an image to float left:</div>
                     <div>img {float: left}</div>
