--- a/sites/layingoutlayouts/pages/grid.html
+++ b/sites/layingoutlayouts/pages/grid.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <meta name="index.html" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylesgrid/stylesgrid.css">
+        <link rel="stylesheet" href="../styles2/styles2.css">
         <title>layingoutlayouts</title>
     </head>
 
