--- a/sites/FinalProject/pages/caracalla.html
+++ b/sites/FinalProject/pages/caracalla.html
@@ -33,7 +33,7 @@
             <div class="parallax"></div>
 
             <ul id="header3">
-                    <p id="nav"><a href=>Home</a></p>
+                    <p id="nav"><a href=../index.html>Home</a></p>
                     <p id="nav"><a href=>About</a></p>
                     <p id="nav"><a href=search.html>Search</a></p>
                     <p id="nav"><a href=>Submit</a></p>
