--- a/sites/FinalProject/index.html
+++ b/sites/FinalProject/index.html
@@ -30,14 +30,14 @@
         </header>
 
         <body>
-            <div class="parallax"></div>
+            <div class="parallaxindex"></div>
 
             <ul id="header3">
-                <p id="nav"><a href=index.html>Home</a></p>
-                <p id="nav"><a href=>About</a></p>
-                <p id="nav"><a href=pages/search.html>Search</a></p>
-                <p id="nav"><a href=>Submit</a></p>
-                <p id="nav"><a href=>Contact</a></p>
+                <p id="nav"><a href="index.html">Home</a></p>
+                <p id="nav"><a href="pages/method.html">Method</a></p>
+                <p id="nav"><a href="pages/search.html">Search</a></p>
+                <p id="nav"><a href="pages/submit.html">Submit</a></p>
+                <p id="nav"><a href="pages/contact.html">Contact</a></p>
             </ul>
 
             
