--- a/sites/FinalProject/pages/search.html
+++ b/sites/FinalProject/pages/search.html
@@ -33,11 +33,11 @@
             <div class="parallax"></div>
 
             <ul id="header3">
-                <p id="nav"><a href=../>Home</a></p>
-                <p id="nav"><a href=>About</a></p>
-                <p id="nav"><a href=search.html>Search</a></p>
-                <p id="nav"><a href=>Submit</a></p>
-                <p id="nav"><a href=>Contact</a></p>
+                <p id="nav"><a href="../index.html">Home</a></p>
+                <p id="nav"><a href="method.html">Method</a></p>
+                <p id="nav"><a href="search.html">Search</a></p>
+                <p id="nav"><a href="submit.html">Submit</a></p>
+                <p id="nav"><a href="contact.html">Contact</a></p>
             </ul>
 
             
