--- a/sites/selfbranding/pages/contact.html
+++ b/sites/selfbranding/pages/contact.html
@@ -45,7 +45,7 @@
         <input type="text" name="phone"></div>
         <div><label>Message</label>
         <textarea name="message"></textarea></div>    
-        <div><a href="mailto:someone@example.com?subject=Test Subject">Send mssage</a></div>
+        <div><a href="mailto:someone@example.com?subject=Test Subject">Send message</a></div>
     </form></div>
                             
                         </li>
