--- a/sites/FinalProject/pages/method.html
+++ b/sites/FinalProject/pages/method.html
@@ -30,7 +30,7 @@
         </header>
 
         <body>
-            <div class="parallaxmethod"></div>
+            <a href="https://www.bbc.co.uk/programmes/p00548dx"><div class="parallaxmethod"><p>Image Credit: “In Our Time, the Examined Life.” BBC Radio 4. BBC, May 9, 2002.</p></div></a>
 
             <ul id="header3">
                     <p id="nav"><a href="../index.html">Home</a></p>
@@ -43,8 +43,8 @@
             
             <div class="grid-method">
                 <div class="grid-item4" id="sidebar">
-                    <img src="https://i.ibb.co/0sp5yt9/Screenshot-2022-11-29-at-1-07-14-PM.png"
-                    height=auto width=80%>
+                    <img src="https://i.ibb.co/9ZmPHt4/Screenshot-2022-11-29-at-1-07-14-PM.png"
+                    height=auto width=60%>
                     <p>Made with <a href="https://voyant-tools.org/">Voyant</a></p>
                 </div>
                 <div class="grid-itemmethod" id="information">Technologies Used
@@ -56,15 +56,20 @@
                           and Labyrinth. The data from these projects can also be exported and shared with others
                           through text files directly from Voyant.
                     </p>
-                    </div>
+                </div>
                     <div class="grid-item4" id="sidebar"></div>
                         <div class="grid-itemmethod" id="information">
+
+
                         You can find more information on how to use Voyant here:
 
-                        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/v3shqQra0Y8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                   </p>
-                        </div>
+                        <p><div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/52b82y" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>                        
+                        </p>
+                        <p id="paragraph">Lynch, Tom Liam. “Voyant Tools Tutorial,” June 13, 2014.</p>
+                        </div>     
               </div>
+              <div class="button"><button onclick="topFunction()" id="myTopBtn" title="Go to top">Back to top &uarr;	</button></div>
+
         </body>
                 
         <footer>
