--- a/sites/FinalProject/pages/contact.html
+++ b/sites/FinalProject/pages/contact.html
@@ -30,7 +30,7 @@
         </header>
 
         <body>
-            <div class="parallaxmethod"></div>
+            <a href="https://www.ancient-origins.net/history-famous-people/solon-father-western-law-005806"><div class="parallaxcontact"><p>Ancient Origins Reconstructing the story of humanitys past. “Solon: The Father of Western Law.” Accessed December 5, 2022.</p></div></a>
 
             <ul id="header3">
                     <p id="nav"><a href="../index.html">Home</a></p>
@@ -43,23 +43,26 @@
             
             <div class="grid-method">
                 <div class="grid-itemmethod" id="information">Contact
+                    </div>    
+                    <div>
+                        <form action="mailto:caitlin.childers@duke.edu" method="post" enctype="text/plain">
+                          <label for="fname">Your name</label>
+                          <input type="text" id="fname" name="firstname,lastname" placeholder="First name, Last name">
 
-                    <p id="paragraph"> <div class="grid-itemsubmit">
-                        <div></div>
-                        <div></div>
-                          <ul style="list-style: none;">
-                          <form name="contact" method="post">
-                    <div><label>Name</label>
-                    <input type="text" name="name"></div>
-                    <div><label>Subject</label>
-                    <input type="text" name="phone"></div>
-                    <div><label>Message</label>
-                    <textarea name="message"></textarea></div>    
-                    <div><a href="mailto:someone@example.com?subject=Test Subject">Send message</a></div>
-                </form></div>
-                    </p>
+                          <label for="lname">Your email</label>
+                          <input type="text" id="lname" name="email" placeholder="myemail@email.com">
+
+                         <label for="fname">Message</label>
+                         <input type="text" id="reason" name="reason" placeholder="My message here...">
+                          <input type="submit" value="Submit">
+                          <input type="reset" value="Reset">
+
+                        </form>
+                      </div>
                         </div>
               </div>
+              <div class="button"><button onclick="topFunction()" id="myTopBtn" title="Go to top">Back to top &uarr;	</button></div>
+
         </body>
                 
         <footer>
