--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content ="caitlinchilders">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio of Web Work</title>
-        <link href="styles1/style1.css" type="text/css" rel="stylesheet">
+        <link href="styleslandingpage/styleslandingpage.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700&family=Trirong:wght@800;900&display=swap" rel="stylesheet">
