--- a/sites/layingoutlayouts/index.html
+++ b/sites/layingoutlayouts/index.html
@@ -15,7 +15,7 @@
     <div id="firstbox">
         <div id="secondbox">
             <div id="thirdbox">
-                <div id="fourthbox"><a href="pages/flexbox.html">Click on the content here!</a></div>
+                <div id="fourthbox"><a href="layingoutlayoutspages/flexbox.html">Click on the content here!</a></div>
         Padding</div>
         Border</div>
         Margin</div>
