--- a/sites/whitenationalist andGreek/Apollo Belvedere.html
+++ b/sites/whitenationalist andGreek/Apollo Belvedere.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Apollo Belvedere</center></h1>   
 <center><picture><image src="https://www.museivaticani.va/content/dam/museivaticani/immagini/collezioni/musei/museo_pio_clementino/02_01_apollo_belvedere.jpg/_jcr_content/renditions/cq5dam.web.1280.1280.jpeg" alt="Terracotta Amphora Jar" width="234.5" height="320"></image></center></image
 srcset="https://www.museivaticani.va/content/dam/museivaticani/immagini/collezioni/musei/museo_pio_clementino/02_01_apollo_belvedere.jpg/_jcr_content/renditions/cq5dam.web.1280.1280.jpeg 2x,
