--- a/sites/whitenationalist andGreek/Johann Gottfried Herder.html
+++ b/sites/whitenationalist andGreek/Johann Gottfried Herder.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Johann Gottfried Herder</center></h1>   
 <center><picture><image src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Johann_Gottfried_Herder_2.jpg" alt="Johann Gottfried Herder" width="334.5" height="426"></center></image
     srcset="https://upload.wikimedia.org/wikipedia/commons/5/5f/Johann_Gottfried_Herder_2.jpg 2x,
