--- a/sites/whitenationalist andGreek/Carl Justi.html
+++ b/sites/whitenationalist andGreek/Carl Justi.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Carl Justi</center></h1>   
 <center><picture>
     <image src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Carl_Justi.jpg/1200px-Carl_Justi.jpg" alt="Carl Justi" width="265" height="368"></center></image
