--- a/sites/whitenationalist andGreek/Chlorite pendant in the form of the head of a Black African.html
+++ b/sites/whitenationalist andGreek/Chlorite pendant in the form of the head of a Black African.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Chlorite pendant in the form of the head of a Black African</center></h1>   
 <center><picture><image src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/243889/533897/main-image" alt="Terracotta Amphora Jar" width="120" height="160"></image></center></image
 srcset="https://collectionapi.metmuseum.org/api/collection/v1/iiif/243889/533897/main-image 2x,
