--- a/sites/whitenationalist andGreek/Identity Evropa.html
+++ b/sites/whitenationalist andGreek/Identity Evropa.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Identity Evropa</center></h1>   
 <center><picture><image src="https://www.splcenter.org/sites/default/files/styles/splc_medium_rectangle/public/group_images/identity-evropa_splc.jpg?itok=u6upybIa&timestamp=1523366168" alt="Identity Evropa" width="198" height="111"></image></center></image
 srcset="https://www.splcenter.org/sites/default/files/styles/splc_medium_rectangle/public/group_images/identity-evropa_splc.jpg?itok=u6upybIa&timestamp=1523366168 2x,
