--- a/sites/whitenationalist andGreek/Marble Statue of a Youthful Hercules.html
+++ b/sites/whitenationalist andGreek/Marble Statue of a Youthful Hercules.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Marble Statue of a Youthful Hercules</center></h1>   
 <center><picture><image src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/247000/541707/main-image" alt="Hercules" width="198" height="264"></image></center></image
 srcset="https://collectionapi.metmuseum.org/api/collection/v1/iiif/247000/541707/main-image 2x,
