--- a/sites/whitenationalist andGreek/The Nazi Party.html
+++ b/sites/whitenationalist andGreek/The Nazi Party.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>The Nazi Party</center></h1>   
 <center><picture><image src="https://ychef.files.bbci.co.uk/976x549/p02mp5xz.webp" alt="Terracotta Amphora Jar" width="198" height="111"></image></center></image
 srcset="https://ychef.files.bbci.co.uk/976x549/p02mp5xz.webp 2x,
