--- a/sites/whitenationalist andGreek/Wickhoff.html
+++ b/sites/whitenationalist andGreek/Wickhoff.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Franz Wickhoff</center></h1>   
 <center><picture><image src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Wickhoff.jpg" alt="Wickhoff" width="265" height="368"></image></center></image
 
