--- a/sites/whitenationalist andGreek/Winckelmann.html
+++ b/sites/whitenationalist andGreek/Winckelmann.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Johann Winckelmann</center></h1>   
 <center><picture>
     <image src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Johann_Joachim_Winckelmann_%28Raphael_Mengs_after_1755%29.jpg" 
