--- a/sites/whitenationalist andGreek/bronze stattuette of a black african youth.html
+++ b/sites/whitenationalist andGreek/bronze stattuette of a black african youth.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Bronze Stattuete of a Black African Youth</center></h1>   
 <center><picture><image src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/250673/2062253/main-image" alt="Bronze Stattuete" width="240" height="320"></image></center></image
 srcset="https://collectionapi.metmuseum.org/api/collection/v1/iiif/250673/2062253/main-image 2x,
