--- a/sites/whitenationalist andGreek/terracotta neck amphora.html
+++ b/sites/whitenationalist andGreek/terracotta neck amphora.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <h4><a href="index copy.html">Home</a></h4>
+        <h4><a href="../whitenationalist andGreek/whitenationalistindex.html">Home</a></h4>
 <h1><center>Terracotta neck-amphora </center></h1>   
 <center><picture></picture><image src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/246725/539882/main-image" alt="Terracotta Amphora Jar" width="120" height="150"></image></center></image
 srcset="https://collectionapi.metmuseum.org/api/collection/v1/iiif/246725/539882/main-image 2x,
