--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="project_description">In this fifth project, I built a personal website that is pro-personal branding or anti-personal branding or ironic personal branding or anywhere in-between</p>
             </article>
             <article id="project6" class="project_item">
-                <h2 class="project_number"><a href="sites/FinalProject/finalprojectindex.html">Title</a></h2>
+                <h2 class="project_number"><a href="sites/FinalProject/finalprojectindex.html">Final Project: The Historiography of Race & Roman Emperors</a></h2>
                 <img class="project_image" src="https://st4.depositphotos.com/1041725/21795/v/1600/depositphotos_217955082-stock-illustration-farnese-hercules-found-1540-baths.jpg" alt="project 6 image" width ="125px"height="300px"/>
                 <h3 class="project_title">Final Project: The Historiography of Race & Roman Emperors</h3>
                 <p class="project_description">In the final project, I Incorporated all the skills I've learned in class to re-imagine a platform, site, or other interface of the internet.</p>
