--- a/sites/FinalProject/finalprojectpages/search.html
+++ b/sites/FinalProject/finalprojectpages/search.html
@@ -33,11 +33,12 @@
             <a href="https://www.skyatnightmagazine.com/space-science/early-astronomy/"><div class="parallax"><p>Chapman, Dr Allan. “What Did Early Astronomers Discover about the Universe? | BBC Sky at Night Magazine.” What did early astronomers discover about the Universe? | BBC Sky at Night Magazine. Accessed December 5, 2022.</p></div></a>
 
             <ul id="header3">
-                <p id="nav"><a href="../finalprojectindex.html">Home</a></p>
-                <p id="nav"><a href="method.html">Method</a></p>
-                <p id="nav"><a href="search.html">Search</a></p>
-                <p id="nav"><a href="submit.html">Submit</a></p>
-                <p id="nav"><a href="contact.html">Contact</a></p>
+                <button type="button" id="navbutton"><p id="nav"><a href="../../index.html">Landing Page</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectindex.html">Home</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/method.html">Method</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/search.html">Search</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/submit.html">Submit</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/contact.html">Contact</a></p></button>
             </ul>
 
             
