--- a/sites/selfbranding/selfbrandingindex.html
+++ b/sites/selfbranding/selfbrandingindex.html
@@ -18,7 +18,8 @@
         <header>
             <nav>
                 <ul id="navigation">
-                <li  id="pagetitle">C.Childers Design</li>
+                <li id="activelinkabout"><a href="../../index.html">Home</a></li>
+                <li id="pagetitle">C.Childers Design</li>
                 <li id="activelinkabout">About</li>
                 <li><a href="pages/graphicdesigngallery.html">Graphic Design</a></li>
                 <li><a href="pages/digitalreconstructiongallery.html">Digital Reconstruction</a>
