--- a/sites/FinalProject/finalprojectpages/caracalla.html
+++ b/sites/FinalProject/finalprojectpages/caracalla.html
@@ -33,11 +33,12 @@
             <div class="parallax"></div>
 
             <ul id="header3">
-                    <p id="nav"><a href="../finalprojectindex.html">Home</a></p>
-                    <p id="nav"><a href="method.html">Method</a></p>
-                    <p id="nav"><a href="search.html">Search</a></p>
-                    <p id="nav"><a href="submit.html">Submit</a></p>
-                    <p id="nav"><a href="contact.html">Contact</a></p>
+                <button type="button" id="navbutton"><p id="nav"><a href="../../index.html">Landing Page</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectindex.html">Home</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/method.html">Method</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/search.html">Search</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/submit.html">Submit</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/contact.html">Contact</a></p></button>
             </ul>
 
             
