--- a/sites/FinalProject/finalprojectpages/contact.html
+++ b/sites/FinalProject/finalprojectpages/contact.html
@@ -33,11 +33,12 @@
             <a href="https://www.ancient-origins.net/history-famous-people/solon-father-western-law-005806"><div class="parallaxcontact"><p>Ancient Origins Reconstructing the story of humanitys past. “Solon: The Father of Western Law.” Accessed December 5, 2022.</p></div></a>
 
             <ul id="header3">
-                    <p id="nav"><a href="../finalprojectindex.html">Home</a></p>
-                    <p id="nav"><a href="method.html">Method</a></p>
-                    <p id="nav"><a href="search.html">Search</a></p>
-                    <p id="nav"><a href="submit.html">Submit</a></p>
-                    <p id="nav"><a href="contact.html">Contact</a></p>
+                <button type="button" id="navbutton"><p id="nav"><a href="../../index.html">Landing Page</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectindex.html">Home</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/method.html">Method</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/search.html">Search</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/submit.html">Submit</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/contact.html">Contact</a></p></button>
             </ul>
 
             
