--- a/sites/FinalProject/finalprojectpages/submit.html
+++ b/sites/FinalProject/finalprojectpages/submit.html
@@ -33,11 +33,12 @@
             <a href="https://examples.yourdictionary.com/ancient-greek-government-4-main-types-explained"><div class="parallaxsubmit"><p>B.A., Jennifer Betts. “Ancient Greek Government: The 4 Main Types Explained.” Ancient Greek Government: The 4 Main Types Explained | YourDictionary. Accessed December 5, 2022.</p></div></a>
 
             <ul id="header3">
-                    <p id="nav"><a href="../finalprojectindex.html">Home</a></p>
-                    <p id="nav"><a href="method.html">Method</a></p>
-                    <p id="nav"><a href="search.html">Search</a></p>
-                    <p id="nav"><a href="submit.html">Submit</a></p>
-                    <p id="nav"><a href="contact.html">Contact</a></p>
+                <button type="button" id="navbutton"><p id="nav"><a href="../../index.html">Landing Page</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectindex.html">Home</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/method.html">Method</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/search.html">Search</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/submit.html">Submit</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/contact.html">Contact</a></p></button>
             </ul>
 
             
