--- a/sites/FinalProject/finalprojectpages/contact.html
+++ b/sites/FinalProject/finalprojectpages/contact.html
@@ -34,11 +34,11 @@
 
             <ul id="header3">
                 <button type="button" id="navbutton"><p id="nav"><a href="../../index.html">Landing Page</a></p></button>
-                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectindex.html">Home</a></p></button>
-                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/method.html">Method</a></p></button>
-                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/search.html">Search</a></p></button>
-                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/submit.html">Submit</a></p></button>
-                <button type="button" id="navbutton"><p id="nav"><a href="finalprojectpages/contact.html">Contact</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="../finalprojectindex.html">Home</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="method.html">Method</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="search.html">Search</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="submit.html">Submit</a></p></button>
+                <button type="button" id="navbutton"><p id="nav"><a href="contact.html">Contact</a></p></button>
             </ul>
 
             
